# LocalKeys

./: .gitignore  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx  api.ts  export.ts  import.ts  main.tsx  prefs.ts  report.ts  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bwdecrypt.rs  clipboard.rs  crypto.rs  generator.rs  kdbx.rs  lib.rs  main.rs  totp.rs
src/components/: Generator.tsx  ImportExport.tsx  LocalePicker.tsx  SecurityReport.tsx  StrengthMeter.tsx  ThemePicker.tsx  TotpDisplay.tsx  UnlockScreen.tsx  VaultScreen.tsx
src/lib/: i18n.ts  theme.ts
src/lib/__tests__/: import.test.ts  report.test.ts  types.test.ts
